--- a/TouristGuide/Views/Attraction/Edit.cshtml
+++ b/TouristGuide/Views/Attraction/Edit.cshtml
@@ -66,7 +66,7 @@
             @Html.LabelFor(model => model.Country)
         </div>
         <div class="editor-field">
-            @Html.DropDownListFor(model => model.Country.ID, new SelectList(ViewBag.Countries, "Value", "Text", Model.Country.ID.ToString()))
+            @Html.DropDownListFor(model => model.Country.ID, new SelectList(ViewBag.Countries, "Value", "Text", Model.Country.ID))
         </div>
 
         <div class="editor-label">
