WebServices CRUD for Country,Places,Attractions + Addresses

--- a/TouristGuide/Content/Site.css
+++ b/TouristGuide/Content/Site.css
@@ -448,3 +448,42 @@ div.review p
     border: 0;
     margin: 10px 0 20px 0;
 }
+
+div.editor-field-images input
+{
+    display: block;
+}
+
+div.post-images ul li
+{
+    display: inline;
+}
+div.post-images img
+{
+    width: 200px;
+}
+
+div.post-video
+{
+    padding: 10px;
+}
+
+div.center
+{
+    text-align: center;
+}
+
+.border-bottom
+{
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid;
+}
+
+div.post-address
+{
+    
+    margin: 5px 0px 10px 0px;
+    border-top: 1px solid;
+    padding-top: 5px;
+}
