--- a/TouristGuide/Views/Attraction/Create.cshtml
+++ b/TouristGuide/Views/Attraction/Create.cshtml
@@ -18,9 +18,17 @@
         var text = tinyMCE.get('Description').getContent();
         $('#Description').html(text);
     }
+
+    function addImgInput() {
+        $('.editor-field-images').append("<input type='file' name='photo' />");
+    }
+
+    function delImgInput() {
+        $('.editor-field-images input').last().remove();
+    }
 </script>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Attraction", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary(true)
     <fieldset>
@@ -70,6 +78,38 @@
         </div>
 
         <div class="editor-label">
+            @Html.LabelFor(model => model.Address.Region)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Address.Region)
+            @Html.ValidationMessageFor(model => model.Address.Region)
+        </div>
+        
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Address.City)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Address.City)
+            @Html.ValidationMessageFor(model => model.Address.City)
+        </div>        
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Address.Street)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Address.Street)
+            @Html.ValidationMessageFor(model => model.Address.Street)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Address.BuildingNumber)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Address.BuildingNumber)
+            @Html.ValidationMessageFor(model => model.Address.BuildingNumber)
+        </div>
+
+        <div class="editor-label">
             @Html.LabelFor(model => model.AttractionType)
         </div>
         <div class="editor-field">
@@ -78,6 +118,23 @@
 
     </fieldset>
     
+    <fieldset>
+        <legend>Photos and Video</legend>
+        
+        <div class="editor-field-images">
+            <input type="file" name="photo" />
+        </div>
+        <input type="button" value=" + " onclick="addImgInput()" /><input type="button" value=" - " onclick="delImgInput()" />
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Video)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Video)
+            @Html.ValidationMessageFor(model => model.Video)
+        </div>
+    </fieldset>
+
     <p>
         <input type="submit" value="Create" onclick="UpdateText()" />
     </p>
