--- a/TouristGuide/Views/Attraction/Index.cshtml
+++ b/TouristGuide/Views/Attraction/Index.cshtml
@@ -33,3 +33,17 @@
         }
     </div>
 }
+
+<div class="center">
+@for (int i = 0; i < ViewBag.PagesCount; ++i)
+{
+    if ((i + 1) == ViewBag.CurrentPage)
+    {
+        <b>@Html.ActionLink("[" + (i + 1).ToString() + "]", "Index", new { start = 10 * i + 1 })</b><text>&nbsp;</text>
+    }
+    else
+    {
+        @Html.ActionLink("[" + (i + 1).ToString() + "]", "Index", new { start = 10 * i + 1 }) <text>&nbsp;</text>
+    }
+}
+</div>
