--- a/TouristGuide/Content/Site.css
+++ b/TouristGuide/Content/Site.css
@@ -487,3 +487,8 @@ div.post-address
     border-top: 1px solid;
     padding-top: 5px;
 }
+
+div.search-cat input[type="text"]
+{
+    width: 100px;
+}
