--- a/TouristGuide/Views/Attraction/ReviewEdit.cshtml
+++ b/TouristGuide/Views/Attraction/ReviewEdit.cshtml
@@ -7,6 +7,7 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
+
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     <fieldset>
@@ -14,6 +15,7 @@
 
         @Html.HiddenFor(model => model.ID)
         @Html.HiddenFor(model => model.AttractionID)
+        <input type="hidden" value="@ViewBag.currentRating" name="oldRating" id="oldRating" />
 
         <div class="editor-label">
             Attraction:
