--- a/TouristGuide/Views/Place/Details.cshtml
+++ b/TouristGuide/Views/Place/Details.cshtml
@@ -4,6 +4,9 @@
     ViewBag.Title = Model.Name;
 }
 
+@Html.ActionLink(Model.Country.Name, "Details", "Country", new { id = Model.Country.ID}, null)
+
+
 @if (Request.IsAuthenticated && HttpContext.Current.User.IsInRole("admin"))
 {
     <p>
@@ -12,6 +15,7 @@
         @Html.ActionLink("Back to List", "Index")
     </p>
 }
+
 
 <p>@Html.Raw(Model.Description)</p>
 
