--- a/TouristGuide/Views/Place/Index.cshtml
+++ b/TouristGuide/Views/Place/Index.cshtml
@@ -14,6 +14,7 @@
 <div class="center border-bottom">
 <form action="/Place/Index" method="get">
     Country: <input type="text" name="country" />
+    City/Region: <input type="text" name="place" />
     <input type="submit" value="Filter" />
 </form>
 </div>
