Look and feel for Country and Place Avg rating on index page

--- a/TouristGuide/Views/Attraction/Details.cshtml
+++ b/TouristGuide/Views/Attraction/Details.cshtml
@@ -5,6 +5,8 @@
     ViewBag.Title = Model.Name;
 }
 
+<link href='jquery.rating.css' type="text/css" rel="stylesheet"/>
+
 @Html.ActionLink(Model.Country.Name, "Details", "Country", new { id = Model.Country.ID}, null) 
 @if(Model.Address.Region != null)
 {
