--- a/TouristGuide/Views/Attraction/DisplayTemplates/Attraction.cshtml
+++ b/TouristGuide/Views/Attraction/DisplayTemplates/Attraction.cshtml
@@ -3,6 +3,7 @@
            
 <div class="post">
     <h1 class="title">@Model.Name</h1>
+    <p><b>Avg. rating:</b> @String.Format("{0:0.00}",Model.AvgRating)</p>
     <p>@Html.Raw(Html.Truncate(Model.Description, 200))</p>
     @Html.ActionLink("Read more", "Details", new { id = Model.ID }, new { @class = "more" })
     @if (Request.IsAuthenticated && HttpContext.Current.User.IsInRole("admin"))
