- paging - filtering: 	*autocomplete 	*ajax reload - reviews: 	* add review on top 	* show more - register / change password

--- a/TouristGuide/Content/Site.css
+++ b/TouristGuide/Content/Site.css
@@ -491,4 +491,18 @@ div.post-address
 div.search-cat input[type="text"]
 {
     width: 100px;
+    margin-right: 10px;
+}
+
+.ui-menu-item{
+    font-size: 12px;
+}
+
+.showMore
+{
+    border: thin solid #FFFFFF;
+    padding: 5px;
+    text-align: center;
+    width: 100px;
+    display: inline-block;
 }
