--- a/TouristGuide/Views/Account/LogOnFast.cshtml
+++ b/TouristGuide/Views/Account/LogOnFast.cshtml
@@ -1,22 +1,29 @@
 ﻿@model TouristGuide.Models.LogOnModel
-           
+		   
 
 @if(Request.IsAuthenticated) 
 {
-    <text>Welcome <b>@Context.User.Identity.Name</b>
-    [ @Html.ActionLink("Log Off", "LogOff", "Account", new { returnUrl = Request.RawUrl }, null) ]</text>
+	<text>Welcome <b>@Context.User.Identity.Name</b>
+	[ @Html.ActionLink("Log Off", "LogOff", "Account", new { returnUrl = Request.RawUrl }, null) ]</text>
+	@:<br />
+    @:<br />
+	@:<div class="sidebar-title">
+		@:Options
+	@:</div>
+	@Html.ActionLink("Change Password","ChangePassword","Account")
+	@:<br />
 }
 
 else 
 {
-    @*@using (Html.BeginForm()) 
-    {*@
-        <form action="/Account/LogOn" method="post">
-            <fieldset>
-                <label for="UserName">User:</label><br />@Html.TextBoxFor(m => m.UserName)<br />
-                <label for="Password">Password:</label><br />@Html.PasswordFor(m => m.Password)<br />
-            <input type="submit" value="Log On" /> @Html.ActionLink("Register", "Register", "Account")
-            </fieldset>
-        </form>
-    @*}*@
+	@*@using (Html.BeginForm()) 
+	{*@
+		<form action="/Account/LogOn" method="post">
+			<fieldset>
+				<label for="UserName">User:</label><br />@Html.TextBoxFor(m => m.UserName)<br />
+				<label for="Password">Password:</label><br />@Html.PasswordFor(m => m.Password)<br />
+			<input type="submit" value="Log On" /> @Html.ActionLink("Register", "Register", "Account")
+			</fieldset>
+		</form>
+	@*}*@
 }
