--- a/TouristGuide/Views/Attraction/Index.cshtml
+++ b/TouristGuide/Views/Attraction/Index.cshtml
@@ -2,17 +2,34 @@
 @{
     ViewBag.Title = "Attractions";
 }
+
+<link href="@Url.Content("~/Content/themes/base/jquery.ui.autocomplete.css")" rel="stylesheet" type="text/css" />
+<link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
+
 <script type="text/javascript">
-    //pagger scrolling
+    //pagger scrolling and filtering
     var more = true;
     var loading = false;
     var count = 20;
     var start = 0;
     var loaderImg = null;
+    var country = '';
+    var place = '';
+    var attr = '';
 
     $(document).ready(function () {
-        ShowLoading();
-        $(window).scroll($.proxy(ScrollHandler, this));
+        country = $("#country").val();
+        place = $("#place").val();
+        attr = $("#attraction").val();
+
+        if ($('.post').length < count) {
+            more = false;
+            HideLoading();
+        }
+        else {
+            ShowLoading();
+            $(window).scroll($.proxy(ScrollHandler, this));
+        }
     });
 
     function ShowLoading() {
@@ -26,8 +43,18 @@
         $(loaderImg).remove();
     }
 
+    function isScrolledIntoView(elem) {
+        var docViewTop = $(window).scrollTop();
+        var docViewBottom = docViewTop + $(window).height();
+
+        var elemTop = $(elem).offset().top;
+        var elemBottom = elemTop + $(elem).height();
+
+        return ((elemBottom <= docViewBottom) && (elemTop >= docViewTop));
+    }
+
     function ScrollHandler(event) {
-        if (event.target.activeElement.offsetHeight < (event.target.activeElement.scrollTop + 880) && loading == false) {
+        if (isScrolledIntoView(loaderImg) && loading == false) {
             GetPage();
         }
     }
@@ -45,18 +72,26 @@
             url: '@Url.Action("GetAttractions", "Attraction")',
             type: 'GET',
             contentType: 'application/json',
-            data: { country: $("#country").val(), place: $("#place").val(), start: start, count: count },
+            data: { country: country, place: place,
+                attraction: attr, start: start, count: count
+            },
             dataType: 'html',
             success: $.proxy(Results, this)
         });
     }
 
     function Results(data) {
-        if (data != null) {
+        if (data != null && data.trim() != '') {
             HideLoading();
             $("#render").append(data);
-            ShowLoading();
-            loading = false;
+            if (data.split('<div class="post">').length - 1 < count) {
+                more = false;
+                HideLoading();
+            }
+            else {
+                ShowLoading();
+                loading = false;
+            }
         }
         else {
             more = false;
@@ -65,6 +100,7 @@
     }
 
 </script>
+@Html.Partial("Partial/Autocomplete")
 
 @if (Request.IsAuthenticated && HttpContext.Current.User.IsInRole("admin"))
 {
@@ -72,12 +108,16 @@
 }
 
 <div class="center border-bottom search-cat">
-<form action="/Attraction/Index" method="get">
-    Country: <input type="text" name="country" id="country"/>
-    City/Region: <input type="text" name="place" id="place"/>
-    Attraction: <input type="text" name="attraction" id="attraction"/>
+@using (Html.BeginForm())
+{
+    <text>Country:</text>
+    @Html.TextBox("country") 
+    <text>City/Region:</text>
+    @Html.TextBox("place") 
+    <text>Attraction:</text>
+    @Html.TextBox("attraction", null, new { @style="width: 150px;" }) 
     <input type="submit" value="Filter" />
-</form>
+}
 </div>
 
 @Html.DisplayFor(m => m)
