--- a/TouristGuide/Views/Attraction/Create.cshtml
+++ b/TouristGuide/Views/Attraction/Create.cshtml
@@ -27,6 +27,36 @@
         $('.editor-field-images input').last().remove();
     }
 </script>
+<script type="text/javascript">
+    var map = null;
+
+    function GetMap() {
+        map = new VEMap('myMap');
+        map.AttachEvent("ondoubleclick", AddPushpin);
+        map.LoadMap();
+        map.HideScalebar();
+    }
+
+    onload = GetMap;
+
+    function AddPushpin(e) {
+        map.Clear();
+        var pixel = new VEPixel(e.mapX, e.mapY);
+        var point = map.PixelToLatLong(pixel);
+
+        var pin = new VEShape(VEShapeType.Pushpin, point);
+        map.AddShape(pin);
+
+        SetLatLong(point);
+
+        return true;
+    }
+
+    function SetLatLong(point) {
+        $('#Coordinates_Latitude').val(point.Latitude);
+        $('#Coordinates_Longitude').val(point.Longitude);
+    }
+</script>
 
 @using (Html.BeginForm("Create", "Attraction", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -54,6 +84,7 @@
     <fieldset>
         <legend>Location</legend>
 
+        <div style="display:inline-table">
         <div class="editor-label">
             @Html.LabelFor(model => model.Coordinates.Latitude)
         </div>
@@ -114,6 +145,11 @@
         </div>
         <div class="editor-field">
             @Html.DropDownListFor(model => model.AttractionType.ID, new SelectList(ViewBag.AttractionTypes, "Value", "Text"))            
+        </div>
+        </div>
+        <div style="display:inline-table; margin-left: 40px;">
+            Double click on map to pick a location.
+            <div id="myMap" style="position: relative; width: 300px; height: 300px;"></div>
         </div>
 
     </fieldset>
