--- a/TouristGuide/Views/Shared/_Layout.cshtml
+++ b/TouristGuide/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
 	<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
 	<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 	<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+    <script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.2"></script>
 </head>
 <body>
 	<div id="site">
