Layout updated WebService updated

--- a/TouristGuide/Views/Account/LogOn.cshtml
+++ b/TouristGuide/Views/Account/LogOn.cshtml
@@ -21,7 +21,7 @@
 {
     <div>
         <fieldset>
-            <legend>Account Information</legend>
+            <legend style="font-size:20px;">Account Information</legend>
 
             <div class="editor-label">
                 @Html.LabelFor(m => m.UserName)
@@ -45,7 +45,7 @@
             </div>
 
             <p>
-                <input type="submit" value="Log On" />
+                <input type="submit" value="Log On" style="color:Gray;"/>
             </p>
         </fieldset>
     </div>
