--- a/TouristGuide/Views/Account/LogOnFast.cshtml
+++ b/TouristGuide/Views/Account/LogOnFast.cshtml
@@ -1,29 +1,36 @@
 ﻿@model TouristGuide.Models.LogOnModel
-		   
+           
 
 @if(Request.IsAuthenticated) 
 {
-	<text>Welcome <b>@Context.User.Identity.Name</b>
-	[ @Html.ActionLink("Log Off", "LogOff", "Account", new { returnUrl = Request.RawUrl }, null) ]</text>
-	@:<br />
-    @:<br />
-	@:<div class="sidebar-title">
-		@:Options
-	@:</div>
-	@Html.ActionLink("Change Password","ChangePassword","Account")
-	@:<br />
+    <text>Welcome <b>@Context.User.Identity.Name</b>
+    [ @Html.ActionLink("Log Off", "LogOff", "Account", new { returnUrl = Request.RawUrl }, null) ]</text>
 }
 
 else 
 {
-	@*@using (Html.BeginForm()) 
-	{*@
-		<form action="/Account/LogOn" method="post">
-			<fieldset>
-				<label for="UserName">User:</label><br />@Html.TextBoxFor(m => m.UserName)<br />
-				<label for="Password">Password:</label><br />@Html.PasswordFor(m => m.Password)<br />
-			<input type="submit" value="Log On" /> @Html.ActionLink("Register", "Register", "Account")
-			</fieldset>
-		</form>
-	@*}*@
+    @*@using (Html.BeginForm()) 
+    {*@
+   
+    
+    
+   
+        <form action="/Account/LogOn" method="post">
+        <span style="font-size:30px;color:white;padding-top:40px;padding-left:21px;">Log On</span>
+            <fieldset>
+                <label for="UserName" style="font-size:16px;color:White;">User:</label><br />@Html.TextBoxFor(m => m.UserName)<br />
+                <label for="Password" style="font-size:16px;color:White;">Password:</label><br />@Html.PasswordFor(m => m.Password)<br />
+            <input type="submit" value="Log On" style="margin-top:10px;color:Gray;"/>
+            </fieldset>
+        </form>
+    <div style="background-color:White;">
+     <fieldset style="border:none;padding-top:10px;">
+       <span style="font-size:14px;color:gray;padding-top:40px;"> @Html.ActionLink("Register", "Register", "Account") if you don't have an account</span>
+       
+            </fieldset>
+    </div>
+    
+ 
+    
+    @*}*@
 }
