--- a/TouristGuide/Views/Attraction/Details.cshtml
+++ b/TouristGuide/Views/Attraction/Details.cshtml
@@ -66,7 +66,7 @@
 	<p>@Html.Raw(Model.Description)</p>   
 <div class="post-address">
 <ul>
-	<li><b>Avg. rating:</b> @String.Format("{0:0.00}",Model.AvgRating)</li>
+	<li><b>Avg. rating:</b> @String.Format("{0:0.00}",666/*Model.AvgRating*/)</li>
 	<li><b>Region:</b> @Model.Address.Region</li>
 	<li><b>City:</b> @Model.Address.City</li>
 	<li><b>Street:</b> @Model.Address.Street @Model.Address.BuildingNumber</li>
