--- a/TouristGuide/Views/Attraction/Edit.cshtml
+++ b/TouristGuide/Views/Attraction/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model TouristGuide.Models.Attraction
+﻿@model TouristGuide.Models.AttractionEditViewModel
 
 @{
-    ViewBag.Title = Model.Name + " - Edit";
+    ViewBag.Title = Model.Attraction.Name + " - Edit";
 }
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
@@ -34,8 +34,8 @@
         map = new VEMap('myMap');
         map.AttachEvent("ondoubleclick", AddPushpin);
 
-        var latitude = @Model.Coordinates.Latitude;
-        var longitude = @Model.Coordinates.Longitude;
+        var latitude = @Model.Attraction.Coordinates.Latitude;
+        var longitude = @Model.Attraction.Coordinates.Longitude;
         
         map.LoadMap(new VELatLong(latitude, longitude),
                 10, VEMapStyle.Road, false);
@@ -62,8 +62,8 @@
     }
 
     function SetLatLong(point) {
-        $('#Coordinates_Latitude').val(point.Latitude);
-        $('#Coordinates_Longitude').val(point.Longitude);
+        $('#Attraction_Coordinates_Latitude').val(point.Latitude);
+        $('#Attraction_Coordinates_Longitude').val(point.Longitude);
     }
 </script>
 
@@ -72,90 +72,90 @@
     @Html.ValidationSummary(true)
     <fieldset>
         <legend>Details</legend>
-
+        @Html.HiddenFor(model => model.Attraction.ID)
         <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
+            @Html.LabelFor(model => model.Attraction.Name)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Name)
-            @Html.ValidationMessageFor(model => model.Name)
+            @Html.EditorFor(model => model.Attraction.Name)
+            @Html.ValidationMessageFor(model => model.Attraction.Name)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Description)
+            @Html.LabelFor(model => model.Attraction.Description)
         </div>
         <div class="editor-field">
-            @Html.TextAreaFor(model => model.Description, new { @class = "TinyMCE" })
-            @Html.ValidationMessageFor(model => model.Description)
+            @Html.TextAreaFor(model => model.Attraction.Description, new { @class = "TinyMCE" })
+            @Html.ValidationMessageFor(model => model.Attraction.Description)
         </div>
     </fieldset>
     
     <fieldset>
         <legend>Location</legend>
             
-            @Html.HiddenFor(model => model.Coordinates.ID)
+            @Html.HiddenFor(model => model.Attraction.Coordinates.ID)
 
         <div style="display:inline-table">
         <div class="editor-label">
-            @Html.LabelFor(model => model.Coordinates.Latitude)
+            @Html.LabelFor(model => model.Attraction.Coordinates.Latitude)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Coordinates.Latitude)
-            @Html.ValidationMessageFor(model => model.Coordinates.Latitude)
+            @Html.EditorFor(model => model.Attraction.Coordinates.Latitude)
+            @Html.ValidationMessageFor(model => model.Attraction.Coordinates.Latitude)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Coordinates.Longitude)
+            @Html.LabelFor(model => model.Attraction.Coordinates.Longitude)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Coordinates.Longitude)
-            @Html.ValidationMessageFor(model => model.Coordinates.Longitude)
+            @Html.EditorFor(model => model.Attraction.Coordinates.Longitude)
+            @Html.ValidationMessageFor(model => model.Attraction.Coordinates.Longitude)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Country)
+            @Html.LabelFor(model => model.Attraction.Country)
         </div>
         <div class="editor-field">
-            @Html.DropDownListFor(model => model.Country.ID, new SelectList(ViewBag.Countries, "Value", "Text", Model.Country.ID))
+            @Html.DropDownListFor(model => model.Attraction.Country.ID, new SelectList(ViewBag.Countries, "Value", "Text", Model.Attraction.Country.ID))
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Address.Region)
+            @Html.LabelFor(model => model.Attraction.Address.Region)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Address.Region)
-            @Html.ValidationMessageFor(model => model.Address.Region)
+            @Html.EditorFor(model => model.Attraction.Address.Region)
+            @Html.ValidationMessageFor(model => model.Attraction.Address.Region)
         </div>
         
         <div class="editor-label">
-            @Html.LabelFor(model => model.Address.City)
+            @Html.LabelFor(model => model.Attraction.Address.City)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Address.City)
-            @Html.ValidationMessageFor(model => model.Address.City)
+            @Html.EditorFor(model => model.Attraction.Address.City)
+            @Html.ValidationMessageFor(model => model.Attraction.Address.City)
         </div>        
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Address.Street)
+            @Html.LabelFor(model => model.Attraction.Address.Street)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Address.Street)
-            @Html.ValidationMessageFor(model => model.Address.Street)
+            @Html.EditorFor(model => model.Attraction.Address.Street)
+            @Html.ValidationMessageFor(model => model.Attraction.Address.Street)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Address.BuildingNumber)
+            @Html.LabelFor(model => model.Attraction.Address.BuildingNumber)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Address.BuildingNumber)
-            @Html.ValidationMessageFor(model => model.Address.BuildingNumber)
+            @Html.EditorFor(model => model.Attraction.Address.BuildingNumber)
+            @Html.ValidationMessageFor(model => model.Attraction.Address.BuildingNumber)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.AttractionType)
+            @Html.LabelFor(model => model.Attraction.AttractionType)
         </div>
         <div class="editor-field">
-            @Html.DropDownListFor(model => model.AttractionType.ID, new SelectList(ViewBag.AttractionTypes, "Value", "Text", Model.AttractionType.ID))
+            @Html.DropDownListFor(model => model.Attraction.AttractionType.ID, new SelectList(ViewBag.AttractionTypes, "Value", "Text", Model.Attraction.AttractionType.ID))
         </div>
         </div>
         <div style="display:inline-table; margin-left: 40px;">
@@ -169,11 +169,11 @@
         <legend>Photos and Video</legend>
         
         
-        @for (int i = 0; i < Model.Images.Count(); ++i)
+        @for (int i = 0; i < Model.Attraction.Images.Count(); ++i)
         { 
             <div style="display:inline-table">
-                    <img src="@Url.Content("~/Content/AttractionImages/" + Model.Images[i].FileName)" alt="Image #@i" style="width:100px" /><br />
-                    <input type="checkbox" name="Image_@i" id="Image_@i" /> Delete image
+                    <img src="@Url.Content("~/Content/AttractionImages/" + Model.Attraction.Images[i].FileName)" alt="Image #@i" style="width:100px" /><br />
+                    <input type="checkbox" name="DeleteImages" id="Image_@i" /> Delete image
             </div>
         }
 
@@ -183,11 +183,11 @@
         <input type="button" value=" + " onclick="addImgInput()" /><input type="button" value=" - " onclick="delImgInput()" />
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Video)
+            @Html.LabelFor(model => model.Attraction.Video)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Video)
-            @Html.ValidationMessageFor(model => model.Video)
+            @Html.EditorFor(model => model.Attraction.Video)
+            @Html.ValidationMessageFor(model => model.Attraction.Video)
         </div>
     </fieldset>
 
