--- a/TouristGuide/Views/Country/Index.cshtml
+++ b/TouristGuide/Views/Country/Index.cshtml
@@ -4,6 +4,113 @@
     ViewBag.Title = "Countries";
 }
 
+<link href="@Url.Content("~/Content/themes/base/jquery.ui.autocomplete.css")" rel="stylesheet" type="text/css" />
+<link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
+
+<script type="text/javascript">
+    //pagger scrolling and filtering
+    var more = true;
+    var loading = false;
+    var count = 20;
+    var start = 0;
+    var loaderImg = null;
+    var country = '';
+
+    $(document).ready(function () {
+        country = $("#country").val();
+
+        if ($('.list li').length < count) {
+            more = false;
+            HideLoading();
+        }
+        else {
+            ShowLoading();
+            $(window).scroll($.proxy(ScrollHandler, this));
+        }
+    });
+
+    function ShowLoading() {
+        loaderImg = $("<div>").addClass("bar").css("clear", "both").css("text-align", "center");
+        var img = $("<img>").attr("src", "/Content/images/indicator.gif");
+        loaderImg.append(img);
+        $("#render").append(loaderImg);
+    }
+
+    function HideLoading() {
+        $(loaderImg).remove();
+    }
+
+    function isScrolledIntoView(elem) {
+        var docViewTop = $(window).scrollTop();
+        var docViewBottom = docViewTop + $(window).height();
+
+        var elemTop = $(elem).offset().top;
+        var elemBottom = elemTop + $(elem).height();
+
+        return ((elemBottom <= docViewBottom) && (elemTop >= docViewTop));
+    }
+
+    function ScrollHandler(event) {
+        if (isScrolledIntoView(loaderImg) && loading == false) {
+            GetPage();
+        }
+    }
+
+    function GetPage(event) {
+        if (more == true) {
+            start += count;
+            GetElements();
+            loading = true;
+        }
+    }
+
+    function GetElements() {
+        $.ajax({
+            url: '@Url.Action("GetCountries", "Country")',
+            type: 'GET',
+            contentType: 'application/json',
+            data: { country: country,
+                start: start, count: count
+            },
+            dataType: 'html',
+            success: $.proxy(Results, this)
+        });
+    }
+
+    function Results(data) {
+        if (data != null && data.trim() != '') {
+            HideLoading();
+            $(".list").append(data);
+            if (data.split('<li>').length - 1 < count) {
+                more = false;
+                HideLoading();
+            }
+            else {
+                ShowLoading();
+                loading = false;
+            }
+        }
+        else {
+            more = false;
+            HideLoading();
+        }
+    }
+
+    function Filter() {
+        country = $("#country").val();
+
+        $(".list li").remove();
+        ShowLoading();
+
+        more = true;
+        loading = true;
+        start = 0;
+        GetElements();
+    }
+
+</script>
+@Html.Partial("Partial/Autocomplete")
+
 @if (Request.IsAuthenticated && HttpContext.Current.User.IsInRole("admin"))
 {
     <p>
@@ -13,23 +120,11 @@
 
 <div class="center border-bottom search-cat">
 <form action="/Country/Index" method="get">
-    Country: <input type="text" name="country" />
-    <input type="submit" value="Filter" />
+    Country: <input type="text" name="country" id="country" />
+    <input type="submit" value="Filter" onclick="Filter(); return false;" />
 </form>
 </div>
 
 <ul class="list">
-@foreach (var item in Model) {
-    <li>
-            @Html.ActionLink(item.Name, "Details", new { id=item.ID })
-        
-        @if (Request.IsAuthenticated && HttpContext.Current.User.IsInRole("admin"))
-        {
-        
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) <text>|</text>
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
-        
-        }
-    </li>
-}
+    @Html.DisplayFor(x=>x)
 </ul>
