--- a/TouristGuide/Views/Attraction/Index.cshtml
+++ b/TouristGuide/Views/Attraction/Index.cshtml
@@ -112,7 +112,7 @@
         if (data != null && data.trim() != '') {
             HideLoading();
             $("#render").append(data);
-            if (data.split('<div class="post">').length - 1 < count) {
+            if (data.split('<div class="post attractionsLemonBg">').length - 1 < count) {
                 more = false;
                 HideLoading();
             }
