--- a/TouristGuide/Content/Site.css
+++ b/TouristGuide/Content/Site.css
@@ -441,10 +441,11 @@ footer li a:hover
 
 fieldset
 {
-    border: 1px solid #ddd;
+    border: 0px;
     padding: 0 1.4em 1.4em 1.4em;
     margin: 2em;
     text-align: left;
+    padding-left: 0px;
 }
 
 legend
@@ -664,15 +665,6 @@ div.search-cat input[type="text"]
 
 .countryObject:hover
 {
-    border: thin solid #FFFFFF;
-    padding: 5px;
-    text-align: center;
-    width: 100px;
-    display: inline-block;
-}
-
-.list li {
-    margin-left: 20px;
     cursor: pointer;
     background-image:url(/Content/images/tileDarkBlue.png)
 }
