--- a/TouristGuide/Views/Place/DisplayTemplates/Place.cshtml
+++ b/TouristGuide/Views/Place/DisplayTemplates/Place.cshtml
@@ -1,10 +1,12 @@
 ﻿@model TouristGuide.Models.Place
            
-<li>
-    @Html.ActionLink(Model.Name, "Details", new { id = Model.ID })
-    @if (Request.IsAuthenticated && HttpContext.Current.User.IsInRole("admin"))
-    {
-        @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) <text>|</text>
-        @Html.ActionLink("Delete", "Delete", new { id = Model.ID })
-    }
-</li>
+<div class="regionBar" name="@Model.ID">
+    <span style="color: White; font-size: 20px;">@Model.Name</span> @*  @Html.ActionLink(item.Name, "Details", new { id = item.ID ,style="color:white;"})*@
+</div>
+@if (Request.IsAuthenticated && HttpContext.Current.User.IsInRole("admin"))
+{
+<div>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Delete", "Delete", new { id = Model.ID })
+</div>
+}
